[gd_scene load_steps=12 format=3 uid="uid://bsr14fuufq7kj"]

[ext_resource type="Script" path="res://src/MapAssets/enemy/sapi/CowEnemy.gd" id="2_script"]
[ext_resource type="Script" uid="uid://dcpr8rygwakx6" path="res://src/Player/EnemyHealthBillboard.gd" id="3_billboard"]
[ext_resource type="PackedScene" uid="uid://cf0kivemvvmfy" path="res://src/MapAssets/enemy/sapi/new-sapi.tscn" id="4_byljh"]
[ext_resource type="Script" uid="uid://d0338ab3o3uoh" path="res://src/Scripts/BeeHurtbox.gd" id="4_hurtbox"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cow"]
radius = 0.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hurtbox"]
radius = 6.0
height = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byljh"]
bg_color = Color(0.05, 0.08, 0.05, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.05, 0.15, 0.05, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bhhc"]
bg_color = Color(0.6, 0.15, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tpgt"]
bg_color = Color(0.05, 0.08, 0.05, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.05, 0.15, 0.05, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e38v"]
bg_color = Color(0.12, 0.35, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.05, 0.15, 0.05, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_l5gx6"]
viewport_path = NodePath("HealthBillboard/SubViewport")

[node name="CowEnemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("2_script")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 1.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_cow")

[node name="Hurtbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 1)
collision_layer = 2
collision_mask = 4
script = ExtResource("4_hurtbox")
processor = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.1, 0, -1.01)
shape = SubResource("CapsuleShape3D_hurtbox")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBillboard" type="Node3D" parent="."]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 0, 12.5, 0)
script = ExtResource("3_billboard")

[node name="SubViewport" type="SubViewport" parent="HealthBillboard"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(160, 32)
render_target_clear_mode = 2
render_target_update_mode = 3

[node name="Control" type="Control" parent="HealthBillboard/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 32.0

[node name="DamageBar" type="ProgressBar" parent="HealthBillboard/SubViewport/Control"]
modulate = Color(0.8, 0.1, 0.1, 1)
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 156.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_byljh")
theme_override_styles/fill = SubResource("StyleBoxFlat_5bhhc")
value = 97.04
show_percentage = false

[node name="ProgressBar" type="ProgressBar" parent="HealthBillboard/SubViewport/Control"]
modulate = Color(1, 0.2, 0.2, 1)
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 156.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxFlat_1tpgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_0e38v")
value = 100.0
show_percentage = false

[node name="Value" type="Label" parent="HealthBillboard/SubViewport/Control/ProgressBar"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 148.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="HealthBillboard"]
modulate = Color(1, 1, 1, 0.95)
pixel_size = 0.006
billboard = 2
texture_filter = 2
texture = SubResource("ViewportTexture_l5gx6")

[node name="sapi" parent="." instance=ExtResource("4_byljh")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.605, 0, -1.07)
